Bug 478203 - Haruna has Wayland generic icon in Power and Battery applet
Summary: Haruna has Wayland generic icon in Power and Battery applet
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-07 10:56 UTC by Patrick Silva
Modified: 2023-12-09 06:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (444.73 KB, image/png)
2023-12-07 10:56 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-12-07 10:56:39 UTC
Created attachment 163972 [details]
screenshot

STEPS TO REPRODUCE
1. play a video with Haruna on Plasma Wayland session
2. click on Power and Battery applet in the system tray
3. 

OBSERVED RESULT
As we can see in the attached screenshot, Haruna has Wayland generic icon.

EXPECTED RESULT
Haruna icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-12-08 23:13:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/haruna/-/merge_requests/35
Comment 2 george fb 2023-12-09 06:14:19 UTC
Git commit d483958b3333ece9a30c3b19140d0120ed60090f by George Florea Bănuș, on behalf of Nicolas Fella.
Committed on 09/12/2023 at 07:14.
Pushed by georgefb into branch 'master'.

lockmanager: Pass desktop file name to screensaver inhibition

That way Plasma can resolve an icon from the desktop file

M  +1    -1    src/lockmanager.cpp

https://invent.kde.org/multimedia/haruna/-/commit/d483958b3333ece9a30c3b19140d0120ed60090f