lockmanager: Pass desktop file name to screensaver inhibition

That way Plasma can resolve an icon from the desktop file

BUG: 478203